<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="352dp"
        android:layout_height="99dp"
        android:layout_margin="8dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"

        android:layout_marginEnd="45dp"
        android:backgroundTint="#C4FFC9"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/Poster"
                android:layout_width="104dp"
                android:layout_height="88dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                tools:ignore="ContentDescription,ImageContrastCheck"
                tools:layout_editor_absoluteX="132dp"
                tools:layout_editor_absoluteY="16dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/Judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/Poster"
                android:text="@string/judul"
                android:textColor="#4E342E" />

            <TextView
                android:id="@+id/Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Judul"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/Poster"
                android:text="@string/rating"
                android:textColor="#4E342E" />

            <TextView
                android:id="@+id/Tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Rating"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/Poster"
                android:text="@string/tanggal"
                android:textColor="#4E342E" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>